# C-project

./: .gitignore  CMakeLists.txt
src/: main.cpp
